--- a/3C_primo.ipynb
+++ b/3C_primo.ipynb
@@ -35,12 +35,12 @@
         "### Prima lezione in 3C.\n",
         "Introduzione all'ambiente notebook.\n",
         "\n",
-        "Come prima operazione da fare bisogna loggarsi in Google con l'account dell'Istituto. Dopo occorre recarsi sul sito https://colab.research.google.com e abbiamo subito l'opportunità di aprire un notebook già esistente o costruirne uno nuovo.\n",
+        "Come prima operazione occorre loggarsi in Google con l'account istituzionale. In seguito recarsi sul sito https://colab.research.google.com dove abbiamo la possibilità di aprire un notebook già esistente oppure di costruirne uno nuovo (scegliere versione 3).\n",
         "\n",
         "\n",
-        "Cos'è un notebook ? è una applicazione web Open Source che mette a disposizione un ambiente di calcolo interattivo in cui si possono combinare codici di calcolo (in python) con testo arricchito formule e grafici.\n",
+        "Cos'è un notebook ? è una applicazione web Open Source che mette a disposizione un ambiente di calcolo interattivo in cui si possono combinare codici di calcolo (in python) con testo arricchito da formule e grafici.\n",
         "\n",
-        "Ad ogni notebook viene assegnata una macchina virtuale che sarà utilizzata non appena si chiederà l'esecuzione di una cella di codice.\n"
+        "Ad ogni notebook viene assegnata una macchina virtuale che sarà attivata alla prima esecuzione di una cella di codice.\n"
       ]
     },
     {
